034-basis_dim: fixed typo

--- a/Vector Spaces and Bases/034-basis_dim.ipynb
+++ b/Vector Spaces and Bases/034-basis_dim.ipynb
@@ -211,7 +211,7 @@
     "\n",
     "The idea of going back and forth between the vector spaces is captured in terms of a **vector space isomorphism**. We do not yet have all of the tools needed to define this rigorously, but for now, we will interpret it as meaning that **every vector space calculation in $V$ is accurately reproduced in $W$, and vice versa**.\n",
     "\n",
-    "In the above example, we used that $P^{(3)}$ and $\\mathbb R^4$ **are isomorphic**, so we can add and scale either the polynomials directly, or work with their coefficient vectors in $\\mathbb R^4$. Even though they are closely related, **they are not the same thing**. Rather $P^{(3)}$ and $\\mathbb R^4$ are different ways of representing polynomials of degree $\\leq 3$, corrected via the chosen basis $B = \\{ 1, x, x^2 ,x^3\\}$.\n",
+    "In the above example, we used that $P^{(3)}$ and $\\mathbb R^4$ **are isomorphic**, so we can add and scale either the polynomials directly, or work with their coefficient vectors in $\\mathbb R^4$. Even though they are closely related, **they are not the same thing**. Rather $P^{(3)}$ and $\\mathbb R^4$ are different ways of representing polynomials of degree $\\leq 3$, connected via the chosen basis $B = \\{ 1, x, x^2 ,x^3\\}$.\n",
     "\n",
     ":::"
    ]
