Made small changes

--- a/Week 1/02-application-network-flow.ipynb
+++ b/Week 1/02-application-network-flow.ipynb
@@ -14,7 +14,7 @@
     "---\n",
     "title: Modeling Network Flow using Systems of Equations\n",
     "subject: Applied Linear Algebra\n",
-    "subtitle: Interactive and responsive lecture notes\n",
+    "subtitle: Applying systems of equations to model networked systems\n",
     "short_title: Modeling Network FLow\n",
     "authors:\n",
     "  - name: Renukanandan Tumu\n",
@@ -68,6 +68,7 @@
    "metadata": {},
    "source": [
     "## Small Example\n",
+    "Let's consider a system of pipes. We measure the inflows and outflows, and no water remains in the system after measurement.\n",
     "\n",
     "```{image} 02-basic-network.png\n",
     ":alt: Simple networks\n",
@@ -179,6 +180,7 @@
    "metadata": {},
    "source": [
     "## Penn Engineering Road Network\n",
+    "We can apply the same sort of thinking to roads!\n",
     "```{image} 02-penn-roads.png\n",
     ":alt: Penn Road Network\n",
     ":width: 400px\n",
@@ -446,7 +448,10 @@
    "id": "7e242090-9a2a-45d7-9a52-725cafe23a39",
    "metadata": {},
    "source": [
-    "We can see that the traffic reflows around the closed link."
+    "We can see that the traffic reflows around the closed link.\n",
+    "\n",
+    "## Related Resources\n",
+    "If you're interested in modeling traffic flow, check out the Cellular Transmission Model and Networked Macroscopic Fundamental Diagram models for more info!"
    ]
   },
   {
