--- a/Linear Algebraic Systems/023-linsys-gauss.ipynb
+++ b/Linear Algebraic Systems/023-linsys-gauss.ipynb
@@ -313,7 +313,7 @@
     "    x = np.zeros((n,))\n",
     "\n",
     "    x[n-1] = M[n-1, -1]/M[n-1, n-1] # -1 is the last index of the particular axis in a python array\n",
-    "    for i in range(n-2, -1, -1): # range(a, b, c) returns the list [a, a+c ,a+2c, ..., b) \n",
+    "    for i in range(n-2, -1, -1): # range(a, b, c) returns the list [a, a+c ,a+2c, ..., b] \n",
     "        x[i] = (M[i, -1] - np.sum(M[i, i+1:-1]*x[i+1:]))/M[i, i] # * is elementwise multiplication of arrays\n",
     "    \n",
     "    return x"
