modified:   Linear Algebraic Systems/022-linsys-matvec.ipynb 	modified:   Vector Spaces and Bases/034-basis_dim.ipynb 	new file:   Vector Spaces and Bases/035-kernel_image.ipynb

--- a/Linear Algebraic Systems/022-linsys-matvec.ipynb
+++ b/Linear Algebraic Systems/022-linsys-matvec.ipynb
@@ -411,6 +411,7 @@
     "## Matrix arithmetic rules\n",
     "\n",
     "```{image} ../figures/02-matrix_arithmetic.png\n",
+    ":label: mat_ar_rules\n",
     ":alt: Matrix arithmetic rules!\n",
     ":width: 600px\n",
     ":align: center\n",
