--- a/Vector Spaces and Bases/034-basis_dim.ipynb
+++ b/Vector Spaces and Bases/034-basis_dim.ipynb
@@ -94,7 +94,7 @@
     ":::{prf:example}\n",
     ":label:basis_eg_2\n",
     "\n",
-    "The set $S = \\{1, x, x^2, \\ldots, x^n\\}$ is a basis for [$P^{(n)}$](031-vector_spaces#poly_ex5): the space of polynomials of degree $\\leq n$. This is called the _standard basis for $P^{(n)}$_.\n",
+    "The set $S = \\{1, x, x^2, \\ldots, x^n\\}$ is a basis for [$P^{(n)}$](./031-vector_spaces#poly_ex5): the space of polynomials of degree $\\leq n$. This is called the _standard basis for $P^{(n)}$_.\n",
     "\n",
     "```{note}\n",
     "$P^{(n)}$ can have upto $n+1$ terms ($a_0, a_1, \\ldots ,a_n$), and the basis $S$ also has $n+1$ terms.\n",
