modified:   Linear Algebraic Systems/026-linsys-general.ipynb 	modified:   Vector Spaces and Bases/031-vector_spaces.ipynb 	modified:   Vector Spaces and Bases/032-subspaces.ipynb 	modified:   Vector Spaces and Bases/034-basis_dim.ipynb 	modified:   Vector Spaces and Bases/035-kernel_image.ipynb

--- a/Vector Spaces and Bases/032-subspaces.ipynb
+++ b/Vector Spaces and Bases/032-subspaces.ipynb
@@ -136,7 +136,7 @@
     ":::{prf:example} Subspaces of discrete time signals\n",
     ":label:subspace-ex3\n",
     "\n",
-    "Here, our base vector space is \\mathbb S, the space of all doubly infinite signals $\\{y_k\\} = (..., y_{-2}, y_{-1}, y_0, y_1, y_2 ...)$.\n",
+    "Here, our base vector space is $\\mathbb S$, the space of all doubly infinite signals $\\{y_k\\} = (..., y_{-2}, y_{-1}, y_0, y_1, y_2 ...)$.\n",
     "\n",
     "1. The set $\\mathbb{S}_{0:T}$ that are zero for all indices except $k = \\{ 0, 1, 2, ..., T\\}$: if $\\{ y_k \\}, \\{z_k\\} \\in \\mathbb S_{0:T}$ then $c\\{y_k\\} + d\\{z_k\\} = \\{cy_k + dz_k\\}$ is also zero for all indices not in $\\{0, 1, ..., T\\}$ for any $c, d, \\in \\mathbb R$.\n",
     "\n",
