--- a/Vector Spaces and Bases/034-basis_dim.ipynb
+++ b/Vector Spaces and Bases/034-basis_dim.ipynb
@@ -102,6 +102,7 @@
     ":::\n",
     "\n",
     "```{important}\n",
+    ":label: dim_defn\n",
     "Suppose a vector space $V$ has a basis composed of $n$ elements $\\vv v_1 ,\\ldots, \\vv v_n$. Then, any other basis for $V$ also has the same number of elements $n$ in it. This number is called the _dimension_ of $V$, written as dim$(V) = n$. \n",
     "```\n",
     "\n",
