--- a/Vector Spaces and Bases/035-kernel_image.ipynb
+++ b/Vector Spaces and Bases/035-kernel_image.ipynb
@@ -98,7 +98,7 @@
     "-x_1 + 4x_2 + 2x_3 &= 0, \n",
     "\\end{equation}\n",
     "or in matrix form $A \\vv x = \\vv 0$, where $A = \\bm1 & 2 & 1 \\\\ -1 & 4 & 2 \\em$.\n",
-    "The set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../LinearAlgebraicSystems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate the solution set to the amtrix $A$ which will give us a geometric interpretation. \n",
+    "The set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../Linear Algebraic Systems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate the solution set to the amtrix $A$ which will give us a geometric interpretation. \n",
     "\n",
     "Is $\\vv u = \\bm 0 \\\\ 1 \\\\ -2 \\em$ in Null$(A)$? \n",
     "\n",
@@ -144,18 +144,35 @@
     "\n",
     ":::{prf:example}\n",
     ":label:null_eg_GE\n",
-    "Let us find a [basis](./034-basis_dim.ipynb#basis_defn) for \n",
+    "Let us find a [basis](./034-basis_dim.ipynb#basis_defn) for Null$(A)$, where \n",
     "$A = \\bm -3 & 6 & -1 & 1 & -7 \\\\\n",
     "1 & -2 & 2 & 3 & -1 \\\\\n",
     "2 & -4 & 5 & 8 & -4\n",
-    "\\em$\n",
+    "\\em$. We reduce $A$ to row echelon form\n",
+    "\\begin{equation}\n",
+    "\\label{null_GE_eqn}\n",
+    "A \\leftrightarrow \\bm 1 & -2 & 0 & -1 & 3 \\\\\n",
+    "0 & 0 & 1 & 2 & -2 \\\\\n",
+    "0 & 0 & 0 & 0 & 0\n",
+    "\\em \\leftrightarrow x_1 = 2x_2 + x_4 - 3x_5, \\ x_3 = -2x_4 + 2x_5.\n",
+    "\\end{equation}\n",
+    "From [](#null_GE_eqn), the free variables are $x_2, x_4, x_4$ and the basic variables are $x_1, x_3$, since, the pivots are at $(1, 1), (2, 3)$. We can decompose the general solution as\n",
+    "\\begin{equation}\n",
+    "\\label{null_soln}\n",
+    "\\bm x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4 \\\\ x_5\\em = \\bm 2x_2 + x_4 - 3x_5 \\\\ x_2 \\\\ -2x_4 + 2x_5 \\\\ x_4 \\\\ x_5\\em = x_2 \\bm 2 \\\\ 1 \\\\ 0 \\\\ 0 \\\\ 0\\em + x_4 \\bm 1 \\\\ 0 \\\\ -2 \\\\ 1 \\\\ 0\\em + x_5 \\bm -3 \\\\ 0 \\\\ 2 \\\\ 0 \\\\ 1\\em = x_2 \\vv u_1 + x_4 \\vv u_2 + x_5 \\vv u_3, \\\\\n",
+    "\\textrm{where}, \\vv u_1 = \\bm 2 \\\\ 1 \\\\ 0 \\\\ 0 \\\\ 0\\em, \\ \\vv u_2 = \\bm 1 \\\\ 0 \\\\ -2 \\\\ 1 \\\\ 0\\em, \\ \\vv u_3 = \\bm -3 \\\\ 0 \\\\ 2 \\\\ 0 \\\\ 1\\em.\n",
+    "\\end{equation}\n",
+    "From [](#null_soln), every linear combination of $\\vv u_1, \\vv u_2, \\vv u_3$ is in Null$(A)$. Also, $\\vv u_1, \\vv u_2, \\vv u_3$ are linearly independent (think when does [](#null_soln) become zero and why so?), hence, $\\vv u_1, \\vv u_2, \\vv u_3$ form a basis for Null$(A)$.\n",
+    "\n",
+    "We conclude that Null$(A) \\subset \\mathbb{R}^5$ is a subspace of [dimension](./034-basis_dim.ipynb#dim_defn) 3.\n",
+    "\n",
     ":::"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "371e5dab-9ff8-4e71-9924-df055dff6e38",
+   "id": "5f9dfaeb-01bd-4e1b-ae04-fa1bd3215523",
    "metadata": {},
    "outputs": [],
    "source": []
