--- a/Vector Spaces and Bases/031-vector_spaces.ipynb
+++ b/Vector Spaces and Bases/031-vector_spaces.ipynb
@@ -203,7 +203,7 @@
     ":label:inf_seq_ex4\n",
     "\n",
     "Let $\\mathbb{S}$ be the space of all _doubly infinite sequences of numbers_:\n",
-    "\\begin{equaiton}\n",
+    "\\begin{equation}\n",
     "\\label{ex4_eqn}\n",
     "\\{y_k\\} := \\{\\ldots, y_{-2}, y_{-1}, y_0, y_1, y_2, \\ldots\\}.\n",
     "end{equation}\n",
