renamed:    Linear Algebraic Systems/020-linsys-intro.ipynb -> Linear_Algebraic_Systems/020-linsys-intro.ipynb 	renamed:    Linear Algebraic Systems/021-linsys-gauss.ipynb -> Linear_Algebraic_Systems/021-linsys-gauss.ipynb 	renamed:    Linear Algebraic Systems/022-linsys-matvec.ipynb -> Linear_Algebraic_Systems/022-linsys-matvec.ipynb 	renamed:    Linear Algebraic Systems/023-linsys-gauss.ipynb -> Linear_Algebraic_Systems/023-linsys-gauss.ipynb 	renamed:    Linear Algebraic Systems/023a-linsys-LU.ipynb -> Linear_Algebraic_Systems/023a-linsys-LU.ipynb 	renamed:    Linear Algebraic Systems/024-linsys-perms.ipynb -> Linear_Algebraic_Systems/024-linsys-perms.ipynb 	renamed:    Linear Algebraic Systems/025-linsys-inverses.ipynb -> Linear_Algebraic_Systems/025-linsys-inverses.ipynb 	renamed:    Linear Algebraic Systems/026-linsys-general.ipynb -> Linear_Algebraic_Systems/026-linsys-general.ipynb 	renamed:    Linear Algebraic Systems/Case study - Network Flows/02-basic-network.png -> Linear_Algebraic_Systems/Case study - Network Flows/02-basic-network.png 	renamed:    Linear Algebraic Systems/Case study - Network Flows/02-net-flow.png -> Linear_Algebraic_Systems/Case study - Network Flows/02-net-flow.png 	renamed:    Linear Algebraic Systems/Case study - Network Flows/02-penn-roads.png -> Linear_Algebraic_Systems/Case study - Network Flows/02-penn-roads.png 	renamed:    Linear Algebraic Systems/Case study - Network Flows/027-application-network-flow.ipynb -> Linear_Algebraic_Systems/Case study - Network Flows/027-application-network-flow.ipynb 	renamed:    Vector Spaces and Bases/031-vector_spaces.ipynb -> Vector_Spaces_and_Bases/031-vector_spaces.ipynb 	renamed:    Vector Spaces and Bases/032-subspaces.ipynb -> Vector_Spaces_and_Bases/032-subspaces.ipynb 	renamed:    Vector Spaces and Bases/033-span_lin_ind.ipynb -> Vector_Spaces_and_Bases/033-span_lin_ind.ipynb 	renamed:    Vector Spaces and Bases/034-basis_dim.ipynb -> Vector_Spaces_and_Bases/034-basis_dim.ipynb 	rename

--- a/Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -65,8 +65,8 @@
     "\n",
     "One natural way of constructing a subspace is using some fundamental vectors in the subspace and takng all possible linear combinations of them.\n",
     "\n",
-    "```{prf:definition} Linear Combination and Span\n",
-    ":label:ln_comb\n",
+    ":::{prf:definition} Linear Combination and Span\n",
+    ":label: ln_comb\n",
     "Let $\\vv v_1 , \\ldots, \\vv v_k$ be elements of a vector space $V$. A sum of the form\n",
     "\\begin{equation}\n",
     "\\label{lin_comb_eqn}\n",
@@ -78,7 +78,7 @@
     "W =\\textrm{span}\\{\\vv v_1 , \\ldots, \\vv v_k\\} \\subset V\n",
     "\\end{equation}\n",
     "consisting of all possible linear combinations with scalars $c_1 , c_2 ,\\ldots , c_k \\in \\mathbb{R}$.\n",
-    "```\n",
+    ":::\n",
     "\n",
     ":::{figure}../figures/03-span.png\n",
     ":label: span_fig\n",
@@ -184,7 +184,7 @@
     "\n",
     "_Linear dependence_ captures a notion of \"redundancy\" in a collection of vectors. \n",
     "\n",
-    "```{prf:definition} Linear dependency\n",
+    ":::{prf:definition} Linear dependency\n",
     ":label:lin_dep\n",
     "The vector space elements $\\vv v_1 , \\ldots , \\vv v_k \\in V$ are called _linearly dependent_ if there exist scalars $c_1 , \\ldots , c_k$, not all zero, such that\n",
     "\\begin{equation}\n",
@@ -192,7 +192,7 @@
     "c_1 \\vv v_1 + \\ldots + c_k \\vv  v_k = \\vv 0.\n",
     "\\end{equation}\n",
     "Elements that are not linearly dependent are called _linearly independent_.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "The condition [](#lin_dep_eqn) implies that we can write each of the $\\vv v_i$ as a linear combination of the other vectors. Hence, it does not add anything new to the span of the collection $\\vv v_1 , \\ldots , \\vv v_k$."
    ]
