--- a/Vector_Spaces_and_Bases/034-basis_dim.ipynb
+++ b/Vector_Spaces_and_Bases/034-basis_dim.ipynb
@@ -64,13 +64,13 @@
     "\n",
     "In this section, we will show that any $n$ _dimensional_ vector space looks like and \"behaves\" the same as $\\mathbb{R}^n$. \n",
     "\n",
-    "```{prf:definition} Basis\n",
+    ":::{prf:definition} Basis\n",
     ":label: basis_defn\n",
     "A basis of a vector space $V$ is a ﬁnite collection of elements $\\vv v_1 ,\\ldots, \\vv v_n \\in\n",
     "V$ that\n",
-    "1. [spans](./033-span_lin_dep#ln_comb) $V$, and \n",
-    "2. is [linearly independent](./033-span_lin_dep#lin_dep).\n",
-    "```\n",
+    "1. [spans](./033-span_lin_ind.ipynb#ln_comb) $V$, and \n",
+    "2. is [linearly independent](./033-span_lin_ind.ipynb#lin_dep).\n",
+    ":::\n",
     "\n",
     "A basis is the smallest collection of vectors that allows us to express any vector $\\vv v \\in V$ as a linear combination of the basis vectors.\n",
     "\n",
@@ -101,10 +101,10 @@
     "```\n",
     ":::\n",
     "\n",
-    "```{important}\n",
+    ":::{prf:definition} Dimension\n",
     ":label: dim_defn\n",
     "Suppose a vector space $V$ has a basis composed of $n$ elements $\\vv v_1 ,\\ldots, \\vv v_n$. Then, any other basis for $V$ also has the same number of elements $n$ in it. This number is called the _dimension_ of $V$, written as dim$(V) = n$. \n",
-    "```\n",
+    ":::\n",
     "\n",
     ":::{prf:example}\n",
     ":label:dim_eg\n",
