--- a/Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -80,7 +80,7 @@
     "The _Null space_ of a matrix $A \\in \\mathbb{R}^{m \\times n}$ is the subspace Null$A \\subset \\mathbb{R}^n$ consisting of all vectors that are annihilated by $A$:\n",
     "\\begin{equation}\n",
     "\\label{null_eqn}\n",
-    "\\textrm{Null}(A) = \\{ vv x \\in \\mathbb{R}^n \\ | \\ A \\vv x = \\vv 0 \\} \\subset \\mathbb{R}^n.\n",
+    "\\textrm{Null}(A) = \\{ \\vv x \\in \\mathbb{R}^n \\ | \\ A \\vv x = \\vv 0 \\} \\subset \\mathbb{R}^n.\n",
     "\\end{equation}\n",
     "```\n",
     "If we think of the function $f(\\vv x) = A \\vv x$ that maps $\\vv x \\mapsto A \\vv x$, then Null$(A)$ is the subset of $\\mathbb{R}^n$ that $f(\\vv x)$ to $\\vv 0$.\n",
@@ -98,7 +98,7 @@
     "-x_1 + 4x_2 + 2x_3 &= 0, \n",
     "\\end{equation}\n",
     "or in matrix form $A \\vv x = \\vv 0$, where $A = \\bm1 & 2 & 1 \\\\ -1 & 4 & 2 \\em$.\n",
-    "The set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../Linear Algebraic Systems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate the solution set to the amtrix $A$ which will give us a geometric interpretation. \n",
+    "The set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../Linear AlgebraicSystems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate the solution set to the amtrix $A$ which will give us a geometric interpretation. \n",
     "\n",
     "Is $\\vv u = \\bm 0 \\\\ 1 \\\\ -2 \\em$ in Null$(A)$? \n",
     "\n",
@@ -168,14 +168,6 @@
     "\n",
     ":::"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f9dfaeb-01bd-4e1b-ae04-fa1bd3215523",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
