modified:   Vector_Spaces_and_Bases/035-kernel_image.ipynb

--- a/Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -98,7 +98,7 @@
     "-x_1 + 4x_2 + 2x_3 &= 0, \n",
     "\\end{equation}\n",
     "or in matrix form $A \\vv x = \\vv 0$, where $A = \\bm1 & 2 & 1 \\\\ -1 & 4 & 2 \\em$.\n",
-    "The set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../Linear AlgebraicSystems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate the solution set to the amtrix $A$ which will give us a geometric interpretation. \n",
+    "The set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../Linear_Algebraic_Systems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate the solution set to the amtrix $A$ which will give us a geometric interpretation. \n",
     "\n",
     "Is $\\vv u = \\bm 0 \\\\ 1 \\\\ -2 \\em$ in Null$(A)$? \n",
     "\n",
