modified:   Linear_Algebraic_Systems/026-linsys-general.ipynb 	modified:   Vector_Spaces_and_Bases/032-subspaces.ipynb 	modified:   Vector_Spaces_and_Bases/033-span_lin_ind.ipynb 	modified:   Vector_Spaces_and_Bases/035-kernel_image.ipynb

--- a/Vector_Spaces_and_Bases/032-subspaces.ipynb
+++ b/Vector_Spaces_and_Bases/032-subspaces.ipynb
@@ -64,10 +64,10 @@
     "\n",
     "An appropriate subset of vectors from a larger vector space arise a lot in real life applications and analysing such a smaller set will be useful for us. Such space of vectors living \"inside\" another vector spaces are called subspaces.\n",
     "\n",
-    "```{prf:definition} Subspace\n",
-    ":label:sub_def\n",
+    ":::{prf:definition} Subspace\n",
+    ":label: sub_def\n",
     "A subspace of a vector space $V$ is a subset $W \\subset V$ that is a vector space in its own right — under the same operations of vector addition and scalar multiplication, and the same zero element.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "One simple way to check if a subset $W \\subset V$ of a vector space $V$ is a subsapce:\n",
     "1. $W$ needs to be non-empty\n",
