--- a/Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -90,7 +90,7 @@
     "A plane and a line spanned by two vectors $\\vv v_1, \\vv v_2$ is given in [](#span_fig). In the case of the line, there is some scalar $c \\in \\mathbb{R}$ such that $\\vv v_1 = c \\vv v_2$. \n",
     "\n",
     "```{important}\n",
-    "The span $W =\\textrm{span}\\{\\vv v_1 , \\ldots, \\vv v_k\\}$ of any finite collection of vector space elements $\\vv v_1 , \\ldots, \\vv v_k \\in V$ is a [subspace](./03-subspaces#sub_def) of $V$.\n",
+    "The span $W =\\textrm{span}\\{\\vv v_1 , \\ldots, \\vv v_k\\}$ of any finite collection of vector space elements $\\vv v_1 , \\ldots, \\vv v_k \\in V$ is a [subspace](./032-subspaces.ipynb#sub_def) of $V$.\n",
     "```"
    ]
   },
@@ -286,8 +286,8 @@
     "```\n",
     "\n",
     "```{note} Observations from [](#lin_dep_thm)\n",
-    "1. Any collection of $k > n$ vectors in $\\mathbb{R}^n$ is linearly dependent because we have more variables (columns) than equations (rows). Hence, we must have at least one [free variable](./026-linsys-general#free_basic_defn).\n",
-    "2. A collection of $k$ vectors in $\\mathbb{R}^n$ is linearly independent if and only if the equation $A \\vv c = \\vv 0$ has no free variables, that is, [rank](./026-linsys-general#rank_defn)($A$) = number of pivots = $k$. This requires $k \\leq n$. \n",
+    "1. Any collection of $k > n$ vectors in $\\mathbb{R}^n$ is linearly dependent because we have more variables (columns) than equations (rows). Hence, we must have at least one [free variable](../Linear_Algebraic_Systems/026-linsys-general.ipynb#free_basic_defn).\n",
+    "2. A collection of $k$ vectors in $\\mathbb{R}^n$ is linearly independent if and only if the equation $A \\vv c = \\vv 0$ has no free variables, that is, [rank](../Linear_Algebraic_Systems/026-linsys-general.ipynb#rank_defn)($A$) = number of pivots = $k$. This requires $k \\leq n$. \n",
     "3. A collection of $k$ vectors span $\\mathbb{R}^n$ if and only if the corresponding $n \\times k$ matrix has rank $n$. This requires $k \\geq n$.\n",
     "```"
    ]
