--- a/Linear_Algebraic_Systems/026-linsys-general.ipynb
+++ b/Linear_Algebraic_Systems/026-linsys-general.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "So far we have discussed techniques to solve only equations that have nonsingular coefficient matrices, since they always have a unique solution. Now, we move towards general systems that have $m$ equations and $n$ unknowns, including non-square ($m \\neq n$) and singular coefficient matrices. We first define a generalized version of the upper triangular matrix as the _row echelon form_ of a matrix. \n",
     "\n",
-    "```{prf:definition} Row echelon form\n",
+    ":::{prf:definition} Row echelon form\n",
     ":label: row_echelon\n",
     "A $m \\times n$ matrix $U$ is said to be in _row echelon form_ if it has the following \"staircase\" structure:\n",
     "\n",
@@ -83,7 +83,7 @@
     "\n",
     "The entries $\\circledast$ are the _pivots_ that must be nonzero. The ﬁrst $r$ rows of $U$ each contain exactly one pivot, but not all columns are required to include a pivot entry. The entries below the “staircase”, indicated by the solid line, are all zero, while the non-pivot\n",
     "entries above the staircase, indicated by $*$, can be anything. The last $m − r$ rows are all zeros.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "An example of a matrix in row echelon form is\n",
     "\\begin{equation}\n",
@@ -155,10 +155,10 @@
    "source": [
     "## Rank of a matrix\n",
     "\n",
-    "```{prf:definition} Rank\n",
+    ":::{prf:definition} Rank\n",
     ":label: rank_defn\n",
     "The _rank_ of a matrix is the numer of pivots in its row echelon form.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "Rank plays a central role in our study of linear algebra, but right now we will explore the connections between rank and the solution set of a linear system. \n",
     "\n",
@@ -293,12 +293,12 @@
     "\n",
     "To find the solutions to compatible linear systems, we first split the variables into two separate classes.\n",
     "\n",
-    "```{prf:definition}\n",
+    ":::{prf:definition}\n",
     ":label: free_basic_defn\n",
     "In a linear system $U \\textbf{x} = \\textbf{c}$ in row echelon form, \n",
     "1. the variables corresponding to columns containing a pivot are called _basic variables_, while \n",
     "2. the variables corresponding to the columns without a pivot are called _free variables_.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "We use back substitution to solve $U \\textbf{x} = \\textbf{c}$, but our goal is to express the basic variables as a function of the free variables. We use our previous example to illustrate this procedure by setting $a = 1, b = 2, c=1, d=2$:\n",
     "\\begin{equation}\n",
