modified:   Linear_Algebraic_Systems/026-linsys-general.ipynb 	modified:   Vector_Spaces_and_Bases/035-kernel_image.ipynb 	new file:   Vector_Spaces_and_Bases/036-superpos.ipynb

--- a/Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: null spaces, column spaces, linear transformations\n",
+    "keywords: null spaces, column spaces, solution of linear systems\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -51,7 +51,7 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- what is a kernel (null space) and image (column space) of a matrix\n",
-    "- linear transformations"
+    "- how does null space and column space relate to solutions of linear systems"
    ]
   },
   {
@@ -75,14 +75,15 @@
     "## Null Space of a Matrix\n",
     "\n",
     "\n",
-    "```{prf:definition} Null space\n",
+    ":::{prf:definition} Null space\n",
     ":label: null_defn\n",
     "The _Null space_ of a matrix $A \\in \\mathbb{R}^{m \\times n}$ is the subspace Null$A \\subset \\mathbb{R}^n$ consisting of all vectors that are annihilated by $A$:\n",
     "\\begin{equation}\n",
     "\\label{null_eqn}\n",
     "\\textrm{Null}(A) = \\{ \\vv x \\in \\mathbb{R}^n \\ | \\ A \\vv x = \\vv 0 \\} \\subset \\mathbb{R}^n.\n",
     "\\end{equation}\n",
-    "```\n",
+    ":::\n",
+    "\n",
     "If we think of the function $f(\\vv x) = A \\vv x$ that maps $\\vv x \\mapsto A \\vv x$, then Null$(A)$ is the subset of $\\mathbb{R}^n$ that $f(\\vv x)$ to $\\vv 0$.\n",
     "```{note}\n",
     "The _Null space_ is also known as the _kernel_ of the matrix. We will use Null$(A)$ in our notes even though ALA uses _kernel_, because _null space_ is more descriptive of what it actually is: $\\{ \\vv x \\in \\mathbb{R}^n \\ | \\ A \\vv x = \\vv 0 \\}$. \n",
@@ -167,6 +168,126 @@
     "We conclude that Null$(A) \\subset \\mathbb{R}^5$ is a subspace of [dimension](./034-basis_dim.ipynb#dim_defn) 3.\n",
     "\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a27d276b-42e7-4840-aeca-e48e3b24756c",
+   "metadata": {},
+   "source": [
+    "## The Column Space of $A$\n",
+    "\n",
+    "We have seen previously that the matrix-vetor product $A \\vv x$, \n",
+    "$$\n",
+    "A \\vv x = x_1 \\vv a_1 + x \\vv a_2 + \\ldots + x_n \\vv a_n,\n",
+    "$$\n",
+    "is the linear combination of the columns of $A = \\bm \\vv a_1 & \\vv a_2 & \\ldots & \\vv a_n\\em$ weighted by the elements of $\\vv x$. By letting the coefficients of $\\vv x$ vary, we define the _column space_ of $A$.\n",
+    "\n",
+    ":::{prf:definition} Column space\n",
+    "The column space of an $m \\times n$ matrix $A$, written as Col$(A)$, is the set of all linear combinations of the columns of $A =  \\bm \\vv a_1 & \\vv a_2 & \\ldots & \\vv a_n\\em$:\n",
+    "\\begin{equation}\n",
+    "\\label{col_eqn}\n",
+    "\\textrm{Col}(A) &= \\{\\vv c \\in \\mathbb{R}^m : \\vv b = A \\vv x \\ \\textrm{for some} \\ \\vv x \\in \\mathbb{R}^n\\}, \\\\\n",
+    "&= \\textrm{span}(\\vv a_1, \\vv a_2, \\ldots, \\vv a_n).\n",
+    "\\end{equation}\n",
+    "The Col$(A)$ is also sometimes called the _image_ or _range space_ of $A$.\n",
+    ":::\n",
+    "\n",
+    "Since Col$(A)$ is defined by the span of some vectors, it is immediate that Col$(A)$ is a subspace. However, Col$(A) \\subset \\mathbb{R}^m$ (where $\\vv b$ lives), not $\\mathbb{R}^n$ (where Null$(A)$ and $\\vv x$ lives). \n",
+    "\n",
+    "```{important}\n",
+    "It is immediate that $A \\vv x = \\vv b$ has at least one solution if and only if $\\vv b \\in $Col$(A)$. \n",
+    "```\n",
+    "\n",
+    ":::{exercise}\n",
+    ":label:col_ex\n",
+    "Find a matrix $A$ so that the set \n",
+    "\\begin{equation}\n",
+    "\\label{col_ex_eqn}\n",
+    "W = \\left\\{ \\bm a + b - 3c \\\\ b + c + a \\\\ -a-b - 6c \\\\ 7a + 7b + 2c\\em : a, b, c \\in \\mathbb{R}\\right\\}\n",
+    "\\end{equation}\n",
+    "is equal to Col$(A)$.\n",
+    "\n",
+    "```{solution} col_ex\n",
+    ":class: dropdown \n",
+    "\n",
+    "First, we write $W$ as a linear combination\n",
+    "\\begin{equation}\n",
+    "\\label{col_ex_soln1}\n",
+    "W = \\left\\{ a \\bm 1 \\\\ 1 \\\\ -1 \\\\ 7\\em + b \\bm 1 \\\\ 1 \\\\ -1 \\\\ 7\\em + c \\bm -3 \\\\ 1 \\\\ -6 \\\\ 2\\em : a, b, c \\in \\mathbb{R}\\right\\}\n",
+    "\\end{equation}\n",
+    "Note that in [](#col_ex_soln1), the first two vectors are the same. Hence, rewriting [](#col_ex_soln1)\n",
+    "\\begin{equation}\n",
+    "\\label{col_ex_soln2}\n",
+    "W &= \\left\\{ (a+b) \\bm 1 \\\\ 1 \\\\ -1 \\\\ 7\\em + c \\bm -3 \\\\ 1 \\\\ -6 \\\\ 2\\em = a' \\bm 1 \\\\ 1 \\\\ -1 \\\\ 7\\em + c \\bm -3 \\\\ 1 \\\\ -6 \\\\ 2\\em : a', c \\in \\mathbb{R}\\right\\}, \\\\\n",
+    "&= \\textrm{span}\\left\\{\\bm 1 \\\\ 1 \\\\ -1 \\\\ 7\\em, \\bm -3 \\\\ 1 \\\\ -6 \\\\ 2\\em\\right\\}\n",
+    "\\end{equation}\n",
+    "We can set the vectors in [](#col_ex_soln2) as the columns of $A: A = \\bm 1 & -3 \\\\ 1 & 1 \\\\ -1 & -6 \\\\ 7 & 2\\em \\Rightarrow W = $Col$(A)$. \n",
+    "\n",
+    "``` \n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9143e156-534b-4edc-bc8e-49b8d9aa7fba",
+   "metadata": {},
+   "source": [
+    "## The Complete Solution to $A \\vv x = \\vv b$\n",
+    "\n",
+    "```{prf:theorem}\n",
+    ":label: soln_thm\n",
+    "The linear system $A \\vv x = \\vv b$ has at least one solution $\\vv x^*$ if and only if $\\vv b \\in $Col$(A)$. If this occurs, then $\\vv x$ is a solution to $A \\vv x = \\vv b$ if and only if \n",
+    "$$\n",
+    "\\vv x = \\vv x^* + \\vv n,\n",
+    "$$\n",
+    "where $\\vv n \\in$ Null$(A)$ is an element of the null space of $A$.\n",
+    ":::{prf:proof} Proof of [](#soln_thm)\n",
+    ":label: proof-soln_thm\n",
+    ":class: dropdown\n",
+    "The first part of the theorem was already discussed [here](./033-span_lin_ind.ipynb#lin_dep_thm). Suppose, $\\vv x$ and $\\vv x^*$ are both solutions so that $A \\vv x = A \\vv x^* = \\vv b$, then their difference $\\vv n = \\vv x - \\vv x^*$ should satisfy\n",
+    "$$\n",
+    "A \\vv n = A (\\vv x - \\vv x^*) = A \\vv x - A \\vv x^* = \\vv b - \\vv b = \\vv 0\n",
+    "$$\n",
+    "so that $\\vv n \\in$Null$(A)$. This means that $\\vv x = \\vv x^* + (\\vv x - \\vv x^*) = \\vv x^* + \\vv n$.\n",
+    ":::\n",
+    "```\n",
+    "\n",
+    "```{note} Consequences of [](#soln_thm)\n",
+    "1. [](#soln_thm) tells us that to contruct the most general solution to $A \\vv x = \\vv b$, we only need to know a _particular solution $\\vv x^*$_ and the general solution to $A \\vv n = \\vv 0$.\n",
+    "2. Remember, we solve inhomogeneous linear ordinary differential equations similar to [](#soln_thm). We will see later that linear algebraic systems and linear ordinary differential equations are both examples of _general linear systems_.\n",
+    "3. Computing the general solution to $A \\vv x = \\vv b$ requires applying Gaussian Elimination (GE) first to $\\bm A | \\vv b\\em$ to get a particular solution, and then GE to $\\bm A | \\vv 0 \\em$ to characterize the null space.\n",
+    "```\n",
+    "\n",
+    ":::{exercise}\n",
+    ":label:thm_ex\n",
+    "TO DO\n",
+    "\n",
+    "```{solution} thm_ex\n",
+    ":class: dropdown \n",
+    "```\n",
+    ":::\n",
+    "\n",
+    "```{prf:theorem} Summary\n",
+    ":label: sum_thm\n",
+    "If $A \\in \\mathbb{R}^{m \\times n}$, then the following conditions are equivalent (any one implies the other):\n",
+    "1. Null$(A) = \\{\\vv 0\\}$, i.e., $A \\vv x = 0$ if and only if $\\vv x = 0$\n",
+    "2. rank$(A) = n$\n",
+    "3. The linear system $A \\vv x = \\vv b$ has no [free variables](../Linear_Algebraic_Systems/026-linsys-general.ipynb#free_basic_defn)\n",
+    "4. The system $A \\vv x = \\vv b$ has a unique solution for each $\\vv b \\in $Col$(A)$.\n",
+    "```\n",
+    "\n",
+    "We can specialize [](#sum_thm) or square matrices, which allows us to characterize if $A$ is invertible via either its null space or column space.\n",
+    "\n",
+    "```{prf:theorem} Invertible Matrices\n",
+    ":label: inv_thm\n",
+    "If $A \\in \\mathbb{R}^{n \\times n}$, then the following conditions are equivalent:\n",
+    "1. $A$ is nonsingular\n",
+    "2. rank$(A) = n$\n",
+    "3. Null$(A) = \\{\\vv 0\\}$\n",
+    "4. Col$(A) = \\mathbb{R}^n$\n",
+    "5. $A \\vv x = \\vv b$ has a unique solution for all $\\vv b \\in \\mathbb{R}^n$.\n",
+    "```"
    ]
   }
  ],
