035-kernel_image: worked exercise

--- a/Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -261,11 +261,65 @@
     "\n",
     ":::{exercise}\n",
     ":label:thm_ex\n",
-    "TO DO\n",
+    "\n",
+    "Find all solutions to the linear system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    x_1 + 2x_2 + x_3 - 2x_4 &= 9\\\\\n",
+    "    -2x_1 - 3x_2 - x_3 + x_4 &= -7\\\\\n",
+    "    x_1 + x_2 - x_3 - x_4 &= 2\n",
+    "\\end{align*}\n",
     "\n",
     "```{solution} thm_ex\n",
     ":class: dropdown \n",
+    "\n",
+    "First, let's form the augmented matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        1 & 2 & 1 & -2 & 9\\\\\n",
+    "        -2 & -3 & -1 & 1 & -7\\\\\n",
+    "        1 & 1 & -1 & -1 & 2\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Putting the coefficient matrix in row echelon form, we get the equivalent system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        1 & 2 & 1 & -2 & 9\\\\\n",
+    "        0 & 1 & 1 & -3 & 11\\\\\n",
+    "        0 & 0 & -1 & -2 & 4\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Putting the coefficient matrix in reduced row echelon form (i.e., eliminating above the pivots, then scaling the pivots to equal 1), we get the equivalent system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        1 & 0 & 0 & 6 & -17\\\\\n",
+    "        0 & 1 & 0 & -5 & 15\\\\\n",
+    "        0 & 0 & 1 & 2 & -4\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "This is equivalent to the linear system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    x_1 + 6x_4 &= -17\\\\\n",
+    "    x_2 - 5x_4 &= 15\\\\\n",
+    "    x_3 + 2x_4 &= -4\n",
+    "\\end{align*}\n",
+    "\n",
+    "whose solutions are given by:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4 \\em &= \\bm -17 - 6x_4 \\\\ 15 + 5x_4 \\\\ -4 - 2x_4 \\\\ x_4 \\em \\\\\n",
+    "    &= \\underbrace{\\bm -17 \\\\ 15 \\\\ -4 \\\\ 0 \\em}_{\\text{particular solution}} + \\underbrace{x_4 \\bm -6 \\\\ 5 \\\\ -2 \\\\1 \\em}_{\\text{null space}}\\tag{for all $x_4 \\in \\mathbb R$}\n",
+    "\\end{align*}\n",
+    "\n",
     "```\n",
+    "\n",
     ":::\n",
     "\n",
     "```{prf:theorem} Summary\n",
