Small spelling/formatting fixes

--- a/Vector_Spaces_and_Bases/034-basis_dim.ipynb
+++ b/Vector_Spaces_and_Bases/034-basis_dim.ipynb
@@ -77,7 +77,7 @@
     ":::{prf:example}\n",
     ":label:basis_eg\n",
     "\n",
-    "The _standard basis of $\\mathbb{R}^n$ consists of the $n$ vectors\n",
+    "The _standard_ basis of $\\mathbb{R}^n$ consists of the $n$ vectors\n",
     "\\begin{equation}\n",
     "\\label{stand_basis}\n",
     "\\vv e_1 = \\bm 1 \\\\ 0 \\\\ 0 \\\\ \\vdots \\\\ 0\\em,\n",
