--- a/Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "Let $V = \\mathcal F(\\mathbb R)$ denote the space of scalar functions $f(x)$ defined on $\\mathbb R$. \n",
     "\n",
-    "1. The span of the three monomials $f_1(x) = 1$, $f_2(x) = x$, $f_3(x) = x^2$ is the ste of functions of the form:\n",
+    "1. The span of the three monomials $f_1(x) = 1$, $f_2(x) = x$, $f_3(x) = x^2$ is the set of functions of the form:\n",
     "\n",
     "\\begin{align*}\n",
     "    f(x) = c_1f_1(x) + c_2f_2(x) + c_3f_3(x) = c_1 + c_2x + c_3x^2\n",
