--- a/Linear_Algebraic_Systems/026-linsys-general.ipynb
+++ b/Linear_Algebraic_Systems/026-linsys-general.ipynb
@@ -83,9 +83,9 @@
     "\n",
     "The entries $\\circledast$ are the _pivots_ that must be nonzero. The ﬁrst $r$ rows of $U$ each contain exactly one pivot, but not all columns are required to include a pivot entry. The entries below the “staircase”, indicated by the solid line, are all zero, while the non-pivot\n",
     "entries above the staircase, indicated by $*$, can be anything. The last $m − r$ rows are all zeros.\n",
-    ":::\n",
     "\n",
     "An example of a matrix in row echelon form is\n",
+    "\n",
     "\\begin{equation}\n",
     "\\begin{bmatrix}\n",
     "\\textbf{2} & 0 & 1 & -5 & 6 \\\\\n",
@@ -94,8 +94,15 @@
     "0 & 0 & 0 & 0 & 0\n",
     "\\end{bmatrix},\n",
     "\\end{equation}\n",
-    "where $r=3, m=4$ and the pivots are in $\\textbf{bold}$\n",
     "\n",
+    "where $r=3, m=4$ and the pivots are in $\\textbf{bold}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d79891",
+   "metadata": {},
+   "source": [
     "```{warning} Missing variables\n",
     "In rare cases, a row echelon matrix could be\n",
     "\\begin{equation}\n",
@@ -426,6 +433,8 @@
     "        2 & 4 & -2 & 9\n",
     "    \\end{array}\\right]\n",
     "\\end{align*}\n",
+    "\n",
+    "is inconsistent.\n",
     "\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
