modified:   Vector_Spaces_and_Bases/037-adj.ipynb

--- a/Vector_Spaces_and_Bases/037-adj.ipynb
+++ b/Vector_Spaces_and_Bases/037-adj.ipynb
@@ -14,7 +14,7 @@
     "---\n",
     "title: Adjoint Systems, Left Null Space, and Row Space\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: transpose of the matrix\n",
+    "subtitle: leading to the fundamental thorem\n",
     "short_title: Adjoint, Left Null and Row Space\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -53,7 +53,8 @@
     "- what is the transpose of a matrix\n",
     "- Adjoint systems\n",
     "- Left Null Space\n",
-    "- Row Space"
+    "- Row Space\n",
+    "- the fundamental theorem of linear algebra and its implications"
    ]
   },
   {
@@ -157,9 +158,51 @@
     "It is called the left null space of $A$ because LNull$(A)$ is composed of row vectors $\\vv w^{\\top}$ that satisfy $\\vv w^{\\top} A = \\vv 0^{\\top}$.\n",
     "\n",
     "\n",
-    ":::{prf:example} TO DO: Single example for Col\n",
-    ":label:all_eg\n",
+    ":::{prf:example} TO DO\n",
+    ":label:alls_eg\n",
+    "Single example for Col$(A)$, Null$(A)$, Row$(A)$, LNull$(A)$, and corresponding NumPy code.\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdb8322c-1ea4-426d-b1c5-667c8ea3f560",
+   "metadata": {},
+   "source": [
+    "## The Fundamental Theorem\n",
+    "\n",
+    "The transpose $A^{\\top}$ of an $m \\times n$ matrix $A$ is the $n \\times m$ matrix obtained by interchanging its rows and columns. Hence, if $B = A^{\\top}$, then $b_{ij} = a_{ji}$. \n",
+    "\n",
+    ":::{prf:theorem} The Fundamental Theorem of Linear Algebra\n",
+    ":label:fund_thm\n",
+    "Let $A$ be an $m \\times n$ matrix, and let $r$ be its rank. Then\n",
+    "\\begin{equation}\n",
+    "\\label{fund_thm_eqn}\n",
+    "\\textrm{dim(Row}(A)) = \\textrm{dim(Col}(A)) = \\textrm{rank}(A) = \\textrm{rank}(A^{\\top}) = r, \\\\\n",
+    "\\textrm{dim(Null}(A)) = n - r, \\ \\textrm{dim(LNull}(A)) = m-r.\n",
+    "\\end{equation}\n",
+    ":::\n",
+    "\n",
+    "The proof of [](#fund_thm) can be found in pp. 114-118 of ALA.\n",
+    "\n",
+    "\n",
+    "```{note} Observations from [](#fund_thm)\n",
+    "1. [Rank](../Linear_Algebraic_Systems/026-linsys-general.ipynb#rank_defn) is defined as the number of pivots, which coincides with the number of linearly independent columns of $A$. Hence, from [](#fund_thm), rank=number of linearly independent rows! \n",
+    "2. Taking transposes does not affect the rank: rank is an intrinsic property of a matrix.\n",
+    "```\n",
+    "\n",
+    "One implication of [](#fund_thm) is given below.\n",
+    "\n",
+    ":::{prf:theorem} Rank-Nullity Theorem\n",
+    ":label:rank_null_thm\n",
+    "If $A \\in \\mathbb{R}^{m \\times n}$, then\n",
+    "\\begin{equation}\n",
+    "\\label{rank_null_thm_eqn}\n",
+    "\\textrm{dim(Col}(A)) + \\textrm{dim(Null}(A)) = n, \\ \\textrm{where} \\\\\n",
+    "\\textrm{dim(Col}(A)) = \\textrm{rank}(A), \\ \\textrm{dim(Null}(A)) = \\textrm{nullity}(A).\n",
+    "\\end{equation}\n",
+    ":::\n",
+    "The statement in [](#rank_null_thm) holds true with Col$(A) \\to$ Row$(A)$ and Null$(A) \\to$ LNull$(A)$."
    ]
   }
  ],
