modified:   Vector_Spaces_and_Bases/035-kernel_image.ipynb 	renamed:    Vector_Spaces_and_Bases/037-adj.ipynb -> Vector_Spaces_and_Bases/036-adj.ipynb 	deleted:    Vector_Spaces_and_Bases/036-superpos.ipynb 	new file:   Vector_Spaces_and_Bases/037-network.ipynb 	new file:   figures/03-network.jpg 	new file:   figures/03-network_flow.jpg 	new file:   figures/03-network_volt.jpg

--- a/Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/Vector_Spaces_and_Bases/036-adj.ipynb
@@ -54,7 +54,7 @@
     "- Adjoint systems\n",
     "- Left Null Space\n",
     "- Row Space\n",
-    "- the fundamental theorem of linear algebra and its implications"
+    "- the fundamental theorem of linear algebra and its implication"
    ]
   },
   {
