--- a/Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: null spaces, column spaces, solution of linear systems\n",
+    "keywords: null spaces, column spaces, solution of linear systems, superposition principle\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -51,7 +51,8 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- what is a kernel (null space) and image (column space) of a matrix\n",
-    "- how does null space and column space relate to solutions of linear systems"
+    "- how does null space and column space relate to solutions of linear systems\n",
+    "- to apply the superposition principle for solving linear systems with different right-hand vectors"
    ]
   },
   {
@@ -342,6 +343,70 @@
     "4. Col$(A) = \\mathbb{R}^n$\n",
     "5. $A \\vv x = \\vv b$ has a unique solution for all $\\vv b \\in \\mathbb{R}^n$.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba2a92f5-7e45-4bd0-ad1b-a1fb9bca22f3",
+   "metadata": {},
+   "source": [
+    "## Applying the Superposition Principle\n",
+    "\n",
+    "For homogeneous systems $A \\vv x = \\vv 0$, [superposition](./035-kernel_image.ipynb#super_thm) let us generate new solutions by combining known solutions. For _inhomogeneous systems_ $A \\vv x = \\vv b$, superposition lets us combine solutions for different $\\vv b$ vectors.\n",
+    "\n",
+    "Suppose we have solutions $\\vv x_1^*$ and $\\vv x_2^*$ to $A \\vv x = \\vv b_1$ and $A \\vv x = \\vv b_2$, respectively. Can I build a solution to $A \\vv x = c_1 \\vv b_1 + c_2 \\vv b_2$ for some $c_1, c_2 \\in \\mathbb{R}$? The answer is [superposition](./035-kernel_image.ipynb#super_thm)!  Let's try $\\vv x^* = c_1 \\vv x_1^* + c_2 \\vv x_2^*$:\n",
+    "\\begin{equation}\n",
+    "\\label{super_eqn}\n",
+    "A \\vv x^* = A (c_1 \\vv x_1^* + c_2 \\vv x_2^*) = c_1 (A \\vv x_1^*) + c_2 (A \\vv x_2^*) = c_1 \\vv b_1 + c_2 \\vv b_2.\n",
+    "\\end{equation}\n",
+    "From [](#super_eqn), $\\vv x^* = c_1 \\vv x_1^* + c_2 \\vv x_2^*$ is a solution to $A \\vv x = c_1 \\vv b_1 + c_2 \\vv b_2$. \n",
+    "\n",
+    ":::{prf:example}\n",
+    ":label:sup_eg\n",
+    "\n",
+    "The system\n",
+    "$$\n",
+    "\\bm 4 & 1 \\\\ 1 & 4 \\em \\bm x_1 \\\\ x_2 \\em = \\bm f_1 \\\\ f_2 \\em\n",
+    "$$\n",
+    "models the mechanical response of a pair of masses connected by springs subject to external forcing. \n",
+    "\n",
+    "The solution $\\vv x = \\bm x_1 \\\\ x_2 \\em$ is the displacement of the masses and the right-hand side $\\vv f = \\bm f_1 \\\\ f_2 \\em$ are the appplied forces.\n",
+    "\n",
+    "For $\\vv f = \\vv e_1 = \\bm 1 \\\\ 0 \\em$, $\\vv x_1^* = \\bm \\frac{4}{15} \\\\ -\\frac{1}{15}\\em$; and $\\vv f = \\vv e_2 = \\bm 0 \\\\ 1 \\em$, $\\vv x_2^* = \\bm -\\frac{1}{15} \\\\ \\frac{4}{15}\\em$. \n",
+    "\n",
+    "Hence, we can write the general solution for $\\vv f = \\bm f_1 \\\\ f_2 \\em f_1 \\vv e_1 + f_2 \\vv e_2$ as $\\vv x^* = f_1 \\vv x_1^* + f_2 \\vv x_2^*$.  \n",
+    ":::\n",
+    "\n",
+    "### The General form\n",
+    "\n",
+    "We can generalize the above idea to more than two solutions. \n",
+    "\n",
+    "If $\\vv x_1^*, \\vv x_2^*, \\ldots, \\vv x_k^*$ are solutions to $A \\vv x = \\vv b_1, A \\vv x = \\vv b_2, \\ldots, A \\vv x = \\vv b_k$, then, for any choice of $c_1, c_2, \\ldots, c_k \\in \\mathbb{R}$, a particular solution to\n",
+    "\\begin{equation}\n",
+    "\\label{gen}\n",
+    "A \\vv x = c_1 \\vv b_1 + c_2 \\vv b_2 + \\ldots + c_k \\vv b_k\n",
+    "\\end{equation}\n",
+    "is given by $\\vv x^* = c_1 \\vv x_1^* + c_2 \\vv x_2^* + \\ldots + c_k \\vv x_k^*$. The general solution to [](#gen) is\n",
+    "\\begin{equation}\n",
+    "\\label{gen_n}\n",
+    "\\vv x = \\vv x^* + \\vv n = c_1 \\vv x_1^* + c_2 \\vv x_2^* + \\ldots + c_k \\vv x_k^* + \\vv n,\n",
+    "\\end{equation}\n",
+    "where $\\vv n \\in $Null$(A)$.\n",
+    "\n",
+    ":::{important}\n",
+    ":label: sup_imp\n",
+    "If we know the particular solutions $\\vv x_1^*, \\vv x_2^*, \\ldots, \\vv x_m^*$ to $A \\vv x = \\vv e_i$ for $i = 1, 2, \\ldots, m$, where $\\vv e_1, \\ldots, \\vv e_m$ are the standard basis vectors of $\\mathbb{R}^m$, then, we can construct a particular solution $\\vv x^*$\n",
+    " to $A \\vv x = \\vv b$ by first writing \n",
+    " $$\n",
+    "\\vv b = b_1 \\vv e_1 + b_2 \\vv e_2  +\\ldots + b_m \\vv e_m\n",
+    " $$\n",
+    " to conclude that $\\vv x = b_1 \\vv x_1 + b_2 \\vv x_2  +\\ldots + b_m \\vv x_m$ is a solution to $A \\vv x = \\vv b$. This tells us how the elements $b_i$ of $\\vv b$ affect our solution $\\vv x^*$.\n",
+    ":::\n",
+    "\n",
+    "```{note}\n",
+    "If $A$ is square, then [this fact](#sup_imp) is another way of computing $A^{-1}$. The vectors $\\vv x_1^*, \\vv x_2^*, \\ldots, \\vv x_m^*$ are the columns of $A^{-1}$(what are the $m$ linear systems?), and $\\vv x^* = A^{-1}\\vv b$.\n",
+    "```\n",
+    "\n"
    ]
   }
  ],
