--- a/Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/Vector_Spaces_and_Bases/036-adj.ipynb
@@ -88,6 +88,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5ce94e27-b915-4ab8-a779-5823bbfd62fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tranpose of \n",
+      "A: \n",
+      " [[-1  5  2]\n",
+      " [ 8  7 -5]] \n",
+      "c: \n",
+      " [[ 3]\n",
+      " [-1]\n",
+      " [-2]] \n",
+      "c1: \n",
+      " [ 3 -1 -2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Transpose of matrices\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[-1, 8],\n",
+    "              [5, 7],\n",
+    "              [2, -5]])\n",
+    "AT = A.T # Transpose of the A matrix\n",
+    "\n",
+    "c = np.array([[3, -1, -2]]) # row vector\n",
+    "cT = c.T\n",
+    "\n",
+    "c1 = np.array([3, -1, -2]) # ?-vector\n",
+    "c1T = c1.T\n",
+    "\n",
+    "print(\"Tranpose of \\nA: \\n\", AT, \"\\nc: \\n\", cT, \"\\nc1: \\n\", c1T)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d52741b0-3bf7-4b39-bbd8-021b03a6aa42",
    "metadata": {},
@@ -165,6 +206,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a551398f-fa14-4d55-b39d-33119c407259",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The A matrix:\n",
+      " Matrix([[1, 5, -2, 2], [0, 1, 2, -5], [1, 3, -3, 7]])\n",
+      "Null space of A: \n",
+      " [Matrix([\n",
+      "[ -7],\n",
+      "[5/3],\n",
+      "[5/3],\n",
+      "[  1]])] \n",
+      "Column space of A: \n",
+      " [Matrix([\n",
+      "[1],\n",
+      "[0],\n",
+      "[1]]), Matrix([\n",
+      "[5],\n",
+      "[1],\n",
+      "[3]]), Matrix([\n",
+      "[-2],\n",
+      "[ 2],\n",
+      "[-3]])]\n",
+      "Left Null space of A: \n",
+      " [] \n",
+      "Row space of A: \n",
+      " [Matrix([\n",
+      "[ 1],\n",
+      "[ 5],\n",
+      "[-2],\n",
+      "[ 2]]), Matrix([\n",
+      "[ 0],\n",
+      "[ 1],\n",
+      "[ 2],\n",
+      "[-5]]), Matrix([\n",
+      "[ 1],\n",
+      "[ 3],\n",
+      "[-3],\n",
+      "[ 7]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Find the four fundamental subspaces of a matrix\n",
+    "from sympy import *\n",
+    "\n",
+    "# A = Matrix([[0, -2, 1],\n",
+    "#             [0, -4, 2],\n",
+    "#             [1, -2, 1]])\n",
+    "\n",
+    "A = Matrix([[1, 5, -2, 2],\n",
+    "            [0, 1, 2, -5],\n",
+    "            [1, 3, -3, 7]])\n",
+    "\n",
+    "print(\"The A matrix:\\n\", A)\n",
+    "\n",
+    "A_Null = A.nullspace()\n",
+    "A_col = A.columnspace()\n",
+    "\n",
+    "print(\"Null space of A: \\n\", A_Null, \"\\nColumn space of A: \\n\", A_col)\n",
+    "\n",
+    "AT = A.T\n",
+    "\n",
+    "A_LNull = AT.nullspace()\n",
+    "A_row = AT.columnspace()\n",
+    "\n",
+    "print(\"Left Null space of A: \\n\", A_LNull, \"\\nRow space of A: \\n\", A_row)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cdb8322c-1ea4-426d-b1c5-667c8ea3f560",
    "metadata": {},
@@ -203,6 +319,33 @@
     "\\end{equation}\n",
     ":::\n",
     "The statement in [](#rank_null_thm) holds true with Col$(A) \\to$ Row$(A)$ and Null$(A) \\to$ LNull$(A)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "90f04428-e354-4158-b1cf-06d075340da4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rank:  3 . Dimension of column space is  3 and null space is  1 \n",
+      "Number of columns n is  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verifying Theorem-1\n",
+    "\n",
+    "dim_col = len(A_col)\n",
+    "rank = A.rank()\n",
+    "dim_null = len(A_Null)\n",
+    "n_cols = A.shape[1] # what is A.shape[0]?\n",
+    "\n",
+    "print(\"Rank: \", rank, \". Dimension of column space is \", dim_col, \"and null space is \", dim_null, \n",
+    "      \"\\nNumber of columns n is \", n_cols)"
    ]
   }
  ],
