partly finished with clustering notes

--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -76,7 +76,7 @@
     "In this course, we will only work with the Euclidean distance. However, given any vector space with a general norm (i.e., $\\mathbb{R}^n$ with the Euclidean norm), we may construct a distance function as the norm of their difference. This leads us to a more general notion of distances:\n",
     "\n",
     ":::{prf:definition} General Distances\n",
-    ":label: euclidean_distance_defn\n",
+    ":label: general_distance_defn\n",
     "\n",
     "For a set $S$, a function $d : S \\times S \\to \\mathbb R$ is a distance function, or metric, if it satisfies the following:\n",
     "\n",
@@ -150,8 +150,6 @@
     ":alt: Nearest neighbor to a vector $\\vv x \\in \\mathbb{R}^2$\n",
     ":width: 400px\n",
     ":align: center\n",
-    ":::\n",
-    "\n",
     ":::"
    ]
   }
