restructed distances lesson

--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Euclidean Distance\n",
+    "# The Euclidean Distance\n",
     "\n",
     "A distance function, or metric, describes how far apart 2 points are.\n",
     "\n",
@@ -72,6 +72,8 @@
     ":width: 200px\n",
     ":align: center\n",
     ":::\n",
+    "\n",
+    "# General Distances\n",
     "\n",
     "In this course, we will only work with the Euclidean distance. However, given any vector space with a general norm (i.e., $\\mathbb{R}^n$ with the Euclidean norm), we may construct a distance function as the norm of their difference. This leads us to a more general notion of distances:\n",
     "\n",
