more kmeans progress; still have to add example with topic discovery

--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -8,7 +8,7 @@
     "title: Distance and Nearest Neighbors\n",
     "subject: Inner Products and Norms\n",
     "subtitle: Measuring how close two vectors are\n",
-    "short_title: Distance\n",
+    "short_title: Distance and Nearest Neighbors\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
